# serializer version: 1
# name: test_autoquant_ignore_annotations
  '''
  def my_func_with_annotations(self, x: int | float, y: float | int) -> str | bool:
      z: str | bool = y | x
      return z
  
  '''
# ---
# name: test_autoquant_load_before_assignment[loop_list_load_before_assignment]
  '''
  def forward(self, image_flags: list[int], lengths: torch.Tensor):
      valid_mask = []
      for flag, length in zip(image_flags, lengths):
          length = self.quantizer_length(length)
          _tmp_2 = fastforward.nn.functional.mul(
              self.quantizer__flag([flag]), length, output_quantizer=self.quantizer_mul
          )
          valid_mask.extend(_tmp_2)
      return valid_mask
  
  '''
# ---
# name: test_autoquant_load_before_assignment[selected_b_unsqueeze_load_before_assignment_with_type_inference]
  '''
  def forward(self, x: torch.Tensor, cat_ids: torch.Tensor) -> torch.Tensor:
      x = self.quantizer_x(x)
      selected_W = self.W[cat_ids]
      selected_W = self.quantizer_selected_W(selected_W)
      selected_b = self.b[cat_ids]
      selected_b_unsqueeze_1 = self.quantizer_selected_b_unsqueeze_1(selected_b.unsqueeze(1))
      _tmp_1 = fastforward.nn.functional.bmm(x, selected_W, output_quantizer=self.quantizer_bmm)
      return fastforward.nn.functional.add(
          _tmp_1, selected_b_unsqueeze_1, output_quantizer=self.quantizer_add
      )
  
  '''
# ---
# name: test_autoquant_load_before_assignment[subscript_load_before_assignment]
  '''
  def forward(self, x: torch.Tensor, idx: int) -> torch.Tensor:
      x = self.quantizer_x(x)
      y = fastforward.nn.functional.add(x, 1, output_quantizer=self.quantizer_add_1)
      _tmp_1 = fastforward.nn.functional.mul(
          self.quantizer_y_idx(y[idx]), 0, output_quantizer=self.quantizer_mul
      )
      z = fastforward.nn.functional.add(_tmp_1, y, output_quantizer=self.quantizer_add_2)
      return z
  
  '''
# ---
# name: test_autoquant_shared_quantized_value[loop_tuple_shared_quantized_value]
  '''
  def forward(self, values: list[tuple[int, int]], b: torch.Tensor):
      b = self.quantizer_b(b)
      hw_list = []
      for x, y in values:
          _tmp_4 = self.quantizer__x_y([(x, y)])
          _tmp_1 = fastforward.nn.functional.mul(_tmp_4, b, output_quantizer=self.quantizer_mul_1)
          _tmp_2 = fastforward.nn.functional.mul(_tmp_4, b, output_quantizer=self.quantizer_mul_2)
          _tmp_3 = fastforward.nn.functional.add(_tmp_1, _tmp_2, output_quantizer=self.quantizer_add)
          hw_list.extend(_tmp_3)
      return hw_list
  
  '''
# ---
# name: test_autoquant_shared_quantized_value[repeated_subscript_shared_quantized_value]
  '''
  def forward(self, x: torch.Tensor, idx: int) -> torch.Tensor:
      x = self.quantizer_x(x)
      y = fastforward.nn.functional.add(x, 1, output_quantizer=self.quantizer_add_1)
      _tmp_1 = self.quantizer_y_idx(y[idx])
      a = fastforward.nn.functional.mul(_tmp_1, 2, output_quantizer=self.quantizer_mul_1)
      b = fastforward.nn.functional.mul(_tmp_1, 3, output_quantizer=self.quantizer_mul_2)
      return fastforward.nn.functional.add(a, b, output_quantizer=self.quantizer_add_2)
  
  '''
# ---
# name: test_autoquant_skip_isolation_for_if_expr
  '''
  def my_func_with_annotations(self, x: Tensor, y: Tensor, flag: bool) -> Tensor:
      x = self.quantizer_x(x)
      y = self.quantizer_y(y)
      out = (
          fastforward.nn.functional.add(x, y, output_quantizer=self.quantizer_add)
          if flag
          else fastforward.nn.functional.sub(y, x, output_quantizer=self.quantizer_sub)
      )
      return out
  
  '''
# ---
# name: test_autoquant_unsupported_contexts_fallback_inline[boolean_and_fallback]
  '''
  def forward(self, x: torch.Tensor, y: torch.Tensor, flag: bool):
      return x if flag and y.sum() > 0 else y
  
  '''
# ---
# name: test_autoquant_unsupported_contexts_fallback_inline[comprehension_fallback]
  '''
  def forward(self, xs: list[torch.Tensor], ys: list[torch.Tensor]) -> list[torch.Tensor]:
      return [
          fastforward.nn.functional.add(
              self.quantizer_x(x), self.quantizer_y(y), output_quantizer=self.quantizer_add
          )
          for x, y in zip(xs, ys)
      ]
  
  '''
# ---
# name: test_raise
  '''
  def my_function(self, x: torch.Tensor) -> torch.Tensor:
      x = self.quantizer_x(x)
      if True:
          x = some_function(x)  # reset quantization status
          raise ValueError("msg")
      return fastforward.nn.functional.mul(x, x, output_quantizer=self.quantizer_mul)
  
  '''
# ---
